<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/grid"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid"
        android:minHeight="320dp"
        android:minWidth="160dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/status_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="2dip"
                android:paddingBottom="2dip"
                android:paddingEnd="4dip"
                android:paddingStart="4dip"
                android:paddingTop="1dip"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textColor="#eeeeee"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dip"
                android:layout_marginTop="3dip"
                android:layout_weight="0">

                <ImageView
                    android:id="@+id/rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dip"
                    android:contentDescription="@string/rated"
                    android:src="@drawable/rated" />

                <ImageView
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/five"
                    android:src="@drawable/five" />

                <ImageView
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/four"
                    android:src="@drawable/four" />

                <ImageView
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/three"
                    android:src="@drawable/three" />

                <ImageView
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/two"
                    android:src="@drawable/two" />

                <ImageView
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/one"
                    android:src="@drawable/one" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dip">

            <Button
                android:id="@+id/player_view"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/my_fleet"
                android:textColor="#eeeeee"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/opponent_view"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/opponent"
                android:textColor="#eeeeee"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fire"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dip"
                android:background="@drawable/button"
                android:text="@string/fire"
                android:textColor="#eeeeee"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dip"
                android:background="@drawable/button"
                android:text="@string/next_game"
                android:textColor="#eeeeee"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dip"
                android:background="@drawable/button"
                android:text="@string/skip_opponent"
                android:textColor="#eeeeee"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>