<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alwaysDrawnWithCache="true"
    android:background="#bb000000">

    <LinearLayout
        android:id="@+id/image_wrapper"
        android:layout_width="56dip"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dip"
            android:background="@drawable/missing"
            android:contentDescription="@string/missing" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:orientation="vertical"
        android:paddingBottom="18dip"
        android:paddingEnd="12dip"
        android:paddingStart="12dip">

        <LinearLayout
            android:id="@+id/name_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="2dip"
                android:text="@string/player"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/last_login"
                android:layout_width="16dip"
                android:layout_height="16dip"
                android:layout_marginEnd="8dip"
                android:layout_marginTop="5dip"
                android:layout_weight="0"
                android:background="@drawable/dot_red"
                android:contentDescription="@string/red_dot" />
        </LinearLayout>

        <TextView
            android:id="@+id/stats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dip"
            android:text="@string/stats"
            android:textColor="#00ffff"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
