<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#22000000"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/logo_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title"
                android:src="@drawable/title_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="end">

            <TextView
                android:id="@+id/activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/player"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/content_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="5dip">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dip"
            android:orientation="vertical"
            android:padding="5dip">

            <Button
                android:id="@+id/add_enemy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:background="@drawable/button"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/add_enemy"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/del_friend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/delete_friend"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_friend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/add_friend"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/header_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/image_wrapper"
                    android:layout_width="56dip"
                    android:layout_height="fill_parent"
                    android:background="#000000"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dip"
                        android:background="@drawable/missing"
                        android:contentDescription="@string/missing" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bb000000"
                    android:orientation="vertical"
                    android:paddingStart="8dip"
                    android:paddingTop="2dip"
                    android:paddingEnd="8dip"
                    android:paddingBottom="8dip">

                    <TextView
                        android:id="@+id/player"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="#333333"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"
                        android:text="@string/name"
                        android:textColor="#00ffff"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/stats"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="#333333"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"
                        android:text="@string/stats"
                        android:textColor="#eeeeee"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="#bb000000"
                android:orientation="vertical"
                android:paddingLeft="5dip"
                android:paddingRight="5dip">

                <TextView
                    android:id="@+id/mode_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:shadowColor="#333333"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/game_mode"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/mode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginBottom="2dip" />

                <TextView
                    android:id="@+id/time_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#333333"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/time_turn"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginBottom="2dip" />

                <CheckBox
                    android:id="@+id/rated"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:shadowColor="#333333"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/rated_game"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/button"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/submit_invite"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
